<resources>
    <string name="app_name">Surface AR Sample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_label_locationmarkers">Location Markers</string>
    <string name="button_label_user">User</string>
    <string name="button_label_dev_tools">Developer Tools</string>
    <string name="label_surface_ar_view">Surface AR View</string>
    <string name="button_label_screenshot">Screen Shot</string>
    <string name="button_label_record_video">Record Video</string>
    <string name="dialog_title_user">Current User</string>
    <string name="button_ok">OK</string>
    <string name="button_label_ondemand">On Demand Markers</string>
    <string name="button_label_nfcwrite">NFC - Write</string>
    <string name="button_label_nfcread">NFC - Read</string>
    <string name="button_label_place">Place</string>
    <string name="button_label_move">Move</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_nfc_tag">Write NFC Tag</string>
    <string name="write_marker_id">Write marker Id</string>
    <string name="write_tag_to_nfc_device">Write Tag to NFC Device</string>
    <string name="randomize_id">Randomize ID</string>
    <string name="pick_id">Pick an On-Demand Marker</string>
    <string name="read_nfc_tag">Read NFC Tag</string>
    <string name="view_scanned_marker">View the Scanned Marker</string>
    <string name="text_label_download_asset">Downloading asset…</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="app_logo">App Logo</string>
    <string name="iar_surface_sdk">Surface SDK</string>

    <string name="account_settings">Account Settings</string>
    <string name="external_userid">External UserID:</string>
    <string name="create_user">Create User</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="migrate_user">Migrate User</string>
    <string name="create_new_user">Create New User</string>
    <string name="login_user">Login User</string>
    <string name="migrate_message">After id regeneration, the data of current userId will be lost. If you would like to migrate data, click MIGRATE, otherwise click OK.</string>
    <string name="enter_external_unserId">Enter external userId:</string>

    <string name="nearby">Nearby</string>
    <string name="take_me_there">Take me there</string>
    <string name="get_marker_by_id">Get Marker by ID</string>
    <string name="get_location_markers">Get Location Markers</string>
    <string name="nfc_upsupport">NFC is not supported on this device.</string>
    <string name="share_and_save">Share and Save</string>
    <string name="no_screenshot_file">No screenshot saved, Uri is null</string>

    <string name="tutorial_point_camera">Point your camera at a surface to place.</string>
    <string name="tutorial_place">Tap the PLACE button to place.</string>
    <string name="permissions_requested">All permissions requested are necessary for the app to run properly.</string>
    <string name="device_not_support_arcore">This device does not support ARCore.</string>
    <string name="distance">Distance:</string>
    <string name="default_location">Coordinates: 48.166667,-100.166667 Radius: 10000</string>
    <string name="coordinates">Coordinates:</string>
    <string name="radius">Radius: 10000</string>
    <string name="there_is_error">There is error</string>
    <string name="location_hint">48.166667, -100.166667</string>
    <string name="enter_location_coordinates">Enter location coordinates</string>
    <string name="percent">%</string>
    <string name="read_nfc_success">Read NFC successfully,</string>
    <string name="not_find_marker">Could not find the marker</string>
    <string name="get_marker_id">Get Marker by ID</string>
    <string name="enter_marker_id">Enter Marker ID:</string>


</resources>